[package]
name = "musig2-example"
version = "0.1.0"
edition = "2021"
description = "Example implementation of MuSig2 multi-signature scheme"

[dependencies]
musig2 = "0.2.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
rand = "0.8"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "basic_musig2"
path = "examples/basic_musig2.rs"