[package]
name = "musig2_example"
version = "0.1.0"
edition = "2021"
description = "Example implementation of MuSig2 multi-signature scheme"

[dependencies]
musig2 = "0.2.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
secp256k1 = { version = "0.30.0", features = ["rand"] }
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[[bin]]
name = "signer"
path = "src/bin/signer.rs"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[[example]]
name = "basic_musig2"
path = "examples/basic_musig2.rs"
